--- a/views/index.pug
+++ b/views/index.pug
@@ -1,27 +1,30 @@
 extends layout
 
 block content
-  div
-      h2(id="recipe-name")
-      h3 Ingredients
-      ul(id="ingredients")
-      h3 Instructions
-      ul(id="instructions")
+  nav
+    div(class="nav-wrapper")
+      a Recipe App
+  div(class="container")
+    div(class="col")
+        h2(id="recipe-name")
+        h3 Ingredients
+        ul(id="ingredients")
+        h3 Instructions
+        ul(id="instructions")
+        br
+
+    div(class="col")
+      input(type="text" id="name-text")
+      h4 Ingredients
+      textarea(id="ingredients-text")
+      button(class="btn" id="add-ingredient" type="button") Add ingredient
+      h4 Instructions
+      textarea(id="instructions-text")
+      button(class="btn" id="add-instruction" type="button") Add instruction
       br
-
-
-  div
-    input(type="text" id="name-text")
-    h4 Ingredients
-    textarea(id="ingredients-text")
-    button(id="add-ingredient" type="button") Add ingredient
-    h4 Instructions
-    textarea(id="instructions-text")
-    button(id="add-instruction" type="button") Add instruction
-    br
-    br
-    input(type="file" id="image-input")
-    br
-    br
-    button(id="submit" type="submit") Submit
+      br
+      input(type="file" id="image-input")
+      br
+      br
+      button(class="btn" id="submit" type="submit") Submit
 
