fixed style css

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   nav
     div(class="nav-wrapper")
-      a(class="app-name center") Recipe App
+      a(href="#" class="app-name center") Recipe App
   div(class="container")
     div(class="col")
         h2(id="recipe-name")
