--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,8 @@ extends layout
 block content
   nav
     div(class="nav-wrapper")
-      a(href="#" class="app-name center") Recipe App
+      a(href="#" class="app-name center") Recipes
+      ul(id="nav-mobile" class="right hide-on-med-and-down")
   div(class="container")
     div(class="col")
         h2(id="recipe-name")
