--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,9 @@ doctype html
 html
   head
     title= title
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
-  script(src="/javascripts/main.js")
+    script(src="/javascripts/main.js")
